2009-07-11  Matt Enright  <awickedshimmy@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Reset insertion cursor.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ClipboardActions.cs: Removed debug message.

2009-07-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Remove unused dep.

2009-07-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting.Regex/Regex.cs: Regex pattern
	  is now accessible.

	* Mono.TextEditor/FoldActions.cs: Added patch "Bug 517487 -
	  [PATCH] Can't unfold in vi mode.".

2009-06-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/FoldActions.cs: Fixed "Bug 515825 - Toggle
	  fold does not work if cursor sent to the end of folded
	  line".

2009-06-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Moved paste text event after
	  the selection/caret is set.

2009-06-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: dnd now fires a paste text
	  event.

2009-06-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor.Highlighting/SemanticRule.cs: Worked on code
	  formatting.

2009-06-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextRenderer.cs: Comment out unused
	  renderers.

2009-06-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: Fixed "Bug 514278 –
	  Matched word highlight not removed when closing search bar".

2009-06-19  Mike Krüger  <mkrueger@novell.com>

	* AssemblyInfo.cs: Commented out empty assembly key file
	  attribute (Bug 513981 - Project template causes CS1726
	  errors).

2009-06-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/LineSplitter.cs: Fixed possible null
	  reference.

2009-06-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed unlikely (but
	  possible) null reference.
